--- a/Project Argus.postman_collection.json
+++ b/Project Argus.postman_collection.json
@@ -10,154 +10,249 @@
 			"name": "User Service",
 			"item": [
 				{
-					"name": "Get all users",
-					"request": {
-						"method": "GET",
-						"header": [],
-						"url": {
-							"raw": "http://localhost:8007/user/api/User",
-							"protocol": "http",
-							"host": [
-								"localhost"
-							],
-							"port": "8007",
-							"path": [
-								"user",
-								"api",
-								"User"
-							]
-						}
-					},
-					"response": []
-				},
-				{
-					"name": "user create",
-					"request": {
-						"method": "POST",
-						"header": [],
-						"body": {
-							"mode": "raw",
-							"raw": "{\r\n  \"userId\": \"1\",\r\n  \"userName\": \"string\",\r\n  \"userType\": \"string\",\r\n  \"userAddress\": \"string\",\r\n  \"userTelephone\": \"string\"\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
+					"name": "User Login",
+					"item": [
+						{
+							"name": "Get Login",
+							"request": {
+								"method": "GET",
+								"header": [],
+								"url": {
+									"raw": "http://localhost:8007/user/api/UserLogin/userid/Admin123",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"UserLogin",
+										"userid",
+										"Admin123"
+									]
 								}
-							}
+							},
+							"response": []
 						},
-						"url": {
-							"raw": "http://localhost:8007/user/api/User",
-							"protocol": "http",
-							"host": [
-								"localhost"
-							],
-							"port": "8007",
-							"path": [
-								"user",
-								"api",
-								"User"
-							]
-						}
-					},
-					"response": []
-				},
-				{
-					"name": "Get user - username",
-					"request": {
-						"method": "GET",
-						"header": [],
-						"url": {
-							"raw": "http://localhost:8007/user/api/User/username/string",
-							"protocol": "http",
-							"host": [
-								"localhost"
-							],
-							"port": "8007",
-							"path": [
-								"user",
-								"api",
-								"User",
-								"username",
-								"string"
-							]
-						}
-					},
-					"response": []
-				},
-				{
-					"name": "Get user - userid",
-					"request": {
-						"method": "GET",
-						"header": [],
-						"url": {
-							"raw": "http://localhost:8007/user/api/User/userid/1",
-							"protocol": "http",
-							"host": [
-								"localhost"
-							],
-							"port": "8007",
-							"path": [
-								"user",
-								"api",
-								"User",
-								"userid",
-								"1"
-							]
-						}
-					},
-					"response": []
-				},
-				{
-					"name": "Update User",
-					"request": {
-						"method": "PUT",
-						"header": [],
-						"body": {
-							"mode": "raw",
-							"raw": "{\r\n  \"userId\": \"1\",\r\n  \"userName\": \"Manuja\",\r\n  \"userType\": \"admin\",\r\n  \"userAddress\": \"string\",\r\n  \"userTelephone\": \"string\"\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
+						{
+							"name": "Update Login",
+							"request": {
+								"method": "PUT",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\r\n    \"userId\": \"Admin123\",\r\n    \"userType\": \"User\",\r\n    \"userPassword\": \"3245\"\r\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "http://localhost:8007/user/api/UserLogin/Admin123",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"UserLogin",
+										"Admin123"
+									]
 								}
-							}
+							},
+							"response": []
 						},
-						"url": {
-							"raw": "http://localhost:8007/user/api/User/1",
-							"protocol": "http",
-							"host": [
-								"localhost"
-							],
-							"port": "8007",
-							"path": [
-								"user",
-								"api",
-								"User",
-								"1"
-							]
+						{
+							"name": "Delete Login",
+							"request": {
+								"method": "DELETE",
+								"header": [],
+								"url": {
+									"raw": "http://localhost:8007/user/api/UserLogin/Admin123",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"UserLogin",
+										"Admin123"
+									]
+								}
+							},
+							"response": []
+						},
+						{
+							"name": "Create Login",
+							"request": {
+								"method": "POST",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\r\n    \"userId\": \"Admin123\",\r\n    \"userType\": \"Admin\",\r\n    \"userPassword\": \"12345\"\r\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "http://localhost:8007/user/api/UserLogin/",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"UserLogin",
+										""
+									]
+								}
+							},
+							"response": []
 						}
-					},
-					"response": []
+					]
 				},
 				{
-					"name": "Delete User",
-					"request": {
-						"method": "DELETE",
-						"header": [],
-						"url": {
-							"raw": "http://localhost:8007/user/api/User/2",
-							"protocol": "http",
-							"host": [
-								"localhost"
-							],
-							"port": "8007",
-							"path": [
-								"user",
-								"api",
-								"User",
-								"2"
-							]
+					"name": "User Management",
+					"item": [
+						{
+							"name": "user create",
+							"request": {
+								"method": "POST",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\r\n  \"userId\": \"1\",\r\n  \"userName\": \"string\",\r\n  \"userType\": \"string\",\r\n  \"userAddress\": \"string\",\r\n  \"userTelephone\": \"string\"\r\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "http://localhost:8007/user/api/User",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"User"
+									]
+								}
+							},
+							"response": []
+						},
+						{
+							"name": "Get user - userid",
+							"request": {
+								"method": "GET",
+								"header": [],
+								"url": {
+									"raw": "http://localhost:8007/user/api/User/userid/1",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"User",
+										"userid",
+										"1"
+									]
+								}
+							},
+							"response": []
+						},
+						{
+							"name": "Update User",
+							"request": {
+								"method": "PUT",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\r\n  \"userId\": \"1\",\r\n  \"userName\": \"Manuja\",\r\n  \"userType\": \"admin\",\r\n  \"userAddress\": \"string\",\r\n  \"userTelephone\": \"string\"\r\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "http://localhost:8007/user/api/User/1",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"User",
+										"1"
+									]
+								}
+							},
+							"response": []
+						},
+						{
+							"name": "Delete User",
+							"request": {
+								"method": "DELETE",
+								"header": [],
+								"url": {
+									"raw": "http://localhost:8007/user/api/User/2",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"User",
+										"2"
+									]
+								}
+							},
+							"response": []
+						},
+						{
+							"name": "Get all users",
+							"request": {
+								"method": "GET",
+								"header": [],
+								"url": {
+									"raw": "http://localhost:8007/user/api/User/",
+									"protocol": "http",
+									"host": [
+										"localhost"
+									],
+									"port": "8007",
+									"path": [
+										"user",
+										"api",
+										"User",
+										""
+									]
+								}
+							},
+							"response": []
 						}
-					},
-					"response": []
+					]
 				}
 			]
 		},
