--- a/Project Argus.postman_collection.json
+++ b/Project Argus.postman_collection.json
@@ -266,7 +266,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n  \"logId\": \"5\",\r\n  \"boxId\": \"102\",\r\n  \"itemType\": \"203\",\r\n  \"userId\": \"300\",\r\n  \"totalCount\": 0,\r\n  \"startTime\": \"2024-05-22T11:04:17\",\r\n  \"endTime\": \"2024-05-22T11:04:17\",\r\n  \"fullLogFile\": \"string\"\r\n}",
+							"raw": "{\r\n  \"logId\": \"25\",\r\n  \"boxId\": \"109\",\r\n  \"itemType\": \"204\",\r\n  \"userId\": \"300\",\r\n  \"totalCount\": 0,\r\n  \"startTime\": \"2024-05-21T11:04:17\",\r\n  \"endTime\": \"2024-05-21T11:04:17\",\r\n  \"fullLogFile\": \"video 1/1 (1/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 28.7ms\\n video 1/1 (2/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 28.7ms\\n video 1/1 (3/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 28.7ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (4/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 26.8ms\\n video 1/1 (5/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 26.4ms\\n video 1/1 (6/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 25.9ms\\n video 1/1 (7/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 25.3ms\\n video 1/1 (8/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.6ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (9/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.5ms\\n video 1/1 (10/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.3ms\\n video 1/1 (11/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.2ms\\n video 1/1 (12/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.2ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (13/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.3ms\\n video 1/1 (14/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.2ms\\n video 1/1 (15/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.3ms\\n video 1/1 (16/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.4ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (17/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 22.4ms\\n video 1/1 (18/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.9ms\\n video 1/1 (19/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.9ms\\n video 1/1 (20/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.6ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (21/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.6ms\\n video 1/1 (22/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.6ms\\n video 1/1 (23/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.6ms\\n video 1/1 (24/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.6ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (25/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.0ms\\n video 1/1 (26/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 21.0ms\\n video 1/1 (27/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.8ms\\n video 1/1 (28/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.8ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (29/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.7ms\\n video 1/1 (30/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.8ms\\n video 1/1 (31/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.7ms\\n video 1/1 (32/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.8ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (33/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.8ms\\n video 1/1 (34/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.7ms\\n video 1/1 (35/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.7ms\\n video 1/1 (36/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.2ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (37/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.2ms\\n video 1/1 (38/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 19.8ms\\n video 1/1 (39/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 19.8ms\\n video 1/1 (40/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 19.8ms\\n 0 0\\n 0 0\\n 0 0\\n 0 0\\n video 1/1 (41/2667) /kaggle/working/video_1.mp4: 384x800 1 Main-box, 5 Sockets, 20.3ms\\n video 1/1 (42/2667) /kaggle/working/video_\"\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -420,41 +420,6 @@
 								"Log",
 								"date",
 								"2024-05-23"
-							]
-						}
-					},
-					"response": []
-				}
-			]
-		},
-		{
-			"name": "Model Service",
-			"item": [
-				{
-					"name": "Model request",
-					"request": {
-						"method": "POST",
-						"header": [],
-						"body": {
-							"mode": "raw",
-							"raw": "{\r\n  \"logId\": \"2\",\r\n  \"boxId\": \"string\",\r\n  \"itemType\": \"string\",\r\n  \"userId\": \"string\",\r\n  \"startTime\": \"2024-05-22T11:06:25.866Z\"\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
-								}
-							}
-						},
-						"url": {
-							"raw": "http://localhost:8007/model/api/Model",
-							"protocol": "http",
-							"host": [
-								"localhost"
-							],
-							"port": "8007",
-							"path": [
-								"model",
-								"api",
-								"Model"
 							]
 						}
 					},
